--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/streams": "~3.0",
         "jwilsson/spotify-web-api-php": "^1.0.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "guzzlehttp/guzzle": "^6.2",
-        "guzzlehttp/streams": "~3.0",
-        "rtheunissen/guzzle-rate-limiter": "^0.3.0"
+        "rtheunissen/guzzle-rate-limiter": "^0.3.0",
+        "tymon/jwt-auth": "^0.5.10"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
