--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": ">=5.6.4",
         "guzzlehttp/guzzle": "^6.2",
         "guzzlehttp/streams": "~3.0",
+        "intervention/image": "^2.3",
+        "intervention/imagecache": "^2.3",
         "jwilsson/spotify-web-api-php": "^1.0.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
